# gltf_viewer

./: .gitignore  CMakeLists.txt  camera.cpp  main.cpp  readme.md  shaders.cpp  window.cpp
include/: camera.h  shaders.h  window.h
libraries/tiny_gltf/src/: tiny_gltf.cc
scene/separate/: assets.gltf
shaders/: point_shadows_depth.frag  scene.frag  scene.vert
